<resources>
    <string name="app_name">Cocktail</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="ingredients">Ingredients</string>
    <string name="method">Method</string>
    <string name="favorites">Favorites</string>
    <string name="filter_text">Filter</string>
    <string name="more_text">More …</string>
    <string name="favorite">Favorite</string>
    <string name="search_hint">Search Ingredient Name …</string>
    <string name="no_results">No results …</string>
    <string name="info">Info</string>
    <string name="about">About</string>
    <string name="long_about">This is an app for Cocktail lovers.</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="share">Share</string>
    <string name="empty"> </string>
    <string name="send_an_email">Send an feedback and suggestions via Email.</string>
    <string name="share_download_link">Share download link with friends.</string>
    <string name="dismiss">DISMISS</string>
    <string name="share_using">Share using:</string>
    <string name="about_body">This is an app for cocktail lovers and curious people. \n The recipes are sourced from thecocktaildb.com</string>
    <string name="name">Name</string>
    <string name="search_by">Search by:</string>
    <string name="clear_favorites">Clear Favorites</string>
    <string name="drink_type">Drink Type:</string>
    <string name="alcoholic">Alcoholic</string>
    <string name="non_alcoholic">Non Alcoholic</string>
    <string name="order">Order:</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="random">Random</string>
    <string name="send_email_using">Send Email using</string>
    <string name="skip">SKIP</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
</resources>
