<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/search_view"
        android:background="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/search_list">

        <EditText
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_0dp"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/dimen_5dp"
            android:layout_marginEnd="@dimen/dimen_5dp"
            android:layout_marginLeft="@dimen/dimen_5dp"
            android:layout_marginRight="@dimen/dimen_5dp"
            android:layout_marginStart="@dimen/dimen_0dp"
            android:id="@+id/input_word"
            android:hint="@string/search_hint"
            android:background="@drawable/input_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_clear"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <requestFocus/>
        </EditText>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clear"
            android:id="@+id/button_clear"
            android:visibility="invisible"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/dimen_10dp"
            app:layout_constraintTop_toTopOf="@id/input_word"
            app:layout_constraintBottom_toBottomOf="@id/input_word"
            app:layout_constraintEnd_toStartOf="@id/button_search"
            app:layout_constraintStart_toEndOf="@id/input_word"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_dark_bg"
            android:id="@+id/button_search"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/dimen_10dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="@id/input_word"
            app:layout_constraintBottom_toBottomOf="@id/input_word"
            app:layout_constraintStart_toEndOf="@id/button_clear"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/no_results"
        app:layout_constraintTop_toBottomOf="@id/search_view"
        app:layout_constraintStart_toStartOf="@id/search_view"
        app:layout_constraintEnd_toEndOf="@id/search_view"
        android:padding="@dimen/dimen_10dp"
        android:text="@string/no_results"
        android:textStyle="italic"
        android:textSize="40sp"
        android:alpha="0.4"
        android:visibility="gone"/>

    <ProgressBar
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        app:layout_constraintTop_toTopOf="@id/search_view"
        app:layout_constraintStart_toStartOf="@id/search_view"
        app:layout_constraintEnd_toEndOf="@id/search_view"
        app:layout_constraintBottom_toBottomOf="@id/search_view"
        android:visibility="gone"
        android:id="@+id/progress_bar"
        android:layout_margin="@dimen/dimen_10dp"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:id="@+id/search_list"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/search_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dimen_3dp"
        android:layout_marginTop="@dimen/dimen_3dp"
        android:layout_marginStart="@dimen/dimen_1dp"
        android:layout_marginRight="@dimen/dimen_1dp"
        android:layout_marginLeft="@dimen/dimen_1dp"
        android:layout_marginEnd="@dimen/dimen_1dp"/>

</android.support.constraint.ConstraintLayout>