<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CocktailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/cocktail_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.6" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_5dp">

            <TextView
                android:id="@+id/tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5dp"
                android:alpha="0.8"
                android:background="@drawable/rounded_bg"
                android:paddingStart="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_5dp"
                android:paddingEnd="@dimen/dimen_10dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:textColor="@android:color/white"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@id/ingredients_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/dimen_10dp"
                android:src="@drawable/ic_favorite"
                app:layout_constraintBottom_toBottomOf="@id/tag"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tag" />

            <TextView
                android:id="@+id/ingredients_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_3dp"
                android:text="@string/ingredients"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/ingredients_recycler"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tag" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ingredients_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/ingredients_title"
                app:layout_constraintTop_toBottomOf="@id/ingredients_title" />

            <TextView
                android:id="@+id/method_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_3dp"
                android:padding="@dimen/dimen_3dp"
                android:text="@string/method"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/method"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ingredients_recycler" />

            <TextView
                android:id="@+id/method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_3dp"
                app:layout_constraintBottom_toTopOf="@id/more_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/method_title"
                app:layout_constraintTop_toBottomOf="@id/method_title" />

            <TextView
                android:id="@+id/more_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_3dp"
                android:text="@string/more_text"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/more_list"
                app:layout_constraintEnd_toEndOf="@id/method"
                app:layout_constraintStart_toStartOf="@id/method"
                app:layout_constraintTop_toBottomOf="@id/method" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/more_list"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/more_title"
                app:layout_constraintTop_toBottomOf="@id/more_title" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>